<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moiro_agv</name>
  <version>0.0.0</version>
  <description>
    ROS 2 packages for MOIRO agv
  </description>
  <maintainer email="alsgk0404@hanyang.ac.kr">minha</maintainer>
  <license>Apache-2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>moiro_description</exec_depend>
  <exec_depend>moiro_agv_bringup</exec_depend>
  <exec_depend>moiro_agv_cartographer</exec_depend>
  <exec_depend>moiro_agv_example</exec_depend>
  <exec_depend>moiro_agv_navigation2</exec_depend>
  <exec_depend>moiro_agv_node</exec_depend>
  <exec_depend>moiro_agv_teleop</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
