<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moiro_agv_node</name>
  <version>0.0.0</version>
  <description>
    moiro_agv driver node that include diff drive controller, odometry and tf node
  </description> 
  <maintainer email="alsgk0404@hanyang.ac.kr">minha</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dynamixel_sdk</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>moiro_interfaces</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
