<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moiro_agv_teleop</name>
  <version>0.0.0</version>
  <description>
    Teleoperation node using keyboard for moiro_agv.
  </description>
  <maintainer email="alsgk0404@hanyang.ac.kr">minha</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
