<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moiro_agv_example</name>
  <version>2.1.5</version>
  <description>
    This package provides four basic examples for moiro_agv (i.e., interactive marker, object detection, patrol and position control).
  </description>
  <maintainer email="alsgk0404@hanyang.ac.kr">minha</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>moiro_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
